--- a/.verb.md
+++ b/.verb.md
@@ -2,7 +2,12 @@
 
 > {%= description %}
 
+## Install
+**Install with NPM**
 {%= include("install-npm", {save: true}) %}
+
+**Install with Bower**
+{%= include("install-bower", {save: true}) %}
 
 ## Usage
 
@@ -19,14 +24,14 @@ indexOf(['a', 'b', 'c', 'a', 'b', 'c'], 'b', 2);
 //=> 4
 ```
 
-## Run tests
+## Related projects
+{%= related(['array-every', 'array-slice', 'array-unique', 'filter-array', 'index-of']) %}
 
-```bash
-npm test
-```
+## Running tests
+{%= include("tests") %}
 
 ## Contributing
-Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
+{%= include("contributing") %}
 
 ## Author
 {%= include("author") %}
@@ -38,3 +43,5 @@ Pull requests and stars are always welcome. For bugs and feature requests, [plea
 ***
 
 {%= include("footer") %}
+
+{%= reflinks(['mout']) %}
