--- a/.verb.md
+++ b/.verb.md
@@ -3,10 +3,7 @@
 > {%= description %}
 
 ## Install
-**Install with NPM**
 {%= include("install-npm", {save: true}) %}
-
-**Install with Bower**
 {%= include("install-bower", {save: true}) %}
 
 ## Usage
@@ -25,7 +22,8 @@ indexOf(['a', 'b', 'c', 'a', 'b', 'c'], 'b', 2);
 ```
 
 ## Related projects
-{%= related(['array-every', 'array-slice', 'array-unique', 'filter-array', 'index-of']) %}
+{%= verbiage.related.description %}
+{%= related(verbiage.related.list, {remove: name}) %}
 
 ## Running tests
 {%= include("tests") %}
